# NPnet

./: .gitignore  CMakeLists.txt  main.cpp
cibp-net-lite/: cibp.py  mh.py  mnistTiny.mat  mnist_cibp.py  test_cibp.py
inc/: Metroplis.h  cibp.h  npnet.h  pywrapper.h
notes/: Pitfalls in Implementation.docx
src/: cibp.cpp
test/: test_utils.cpp
